# mathlib-bench

./: Dockerfile  README.md  build  hie.yaml  install.sh  mathlib-bench-frontend.service  mathlib-bench.cabal  mathlib-bench.service  stack.yaml
backend/: Main.hs
backend/MathlibBench/Backend/: Config.hs  Logging.hs
frontend/: Main.hs
frontend/MathlibBench/Frontend/: Config.hs  Static.hs
lib/MathlibBench/: Api.hs  Command.hs  Config.hs  GitRepo.hs  Logging.hs  Secret.hs  Types.hs  UnixSeconds.hs
lib/MathlibBench/GitRepo/: Lock.hs
lib/MathlibBench/Runner/: CmdArgs.hs  Config.hs  LinesOfCode.hs  Main.hs
lib/MathlibBench/Supervisor/: CmdArgs.hs  Config.hs  Db.hs  Frontend.hs  Main.hs  Zulip.hs
lib/MathlibBench/Supervisor/Db/: Schema.hs
lib/MathlibBench/Supervisor/Frontend/: CommitPage.hs  Json.hs  PerFileTimingPage.hs  Static.hs  TimingPage.hs
lib/MathlibBench/Supervisor/GitRepo/: Timestamp.hs
runner/: Main.hs
src/: Config.hs  Logging.hs  Main.hs
static/: global.css
supervisor/: Main.hs
systemd/: mathlib-bench-backend.service
