cabal-version:       2.2
name:                mathlib-bench
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jlimperg/mathlib-bench#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (C) 2020 Jannis Limperg
category:            Education
build-type:          Simple
extra-source-files:  README.md

common deps
  build-depends:       base >= 4.7 && < 5
                     , sqlite-simple == 0.4.*
                     , text == 1.2.*
                     , time == 1.9.*

library
  import:              deps
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:       filepath == 1.4.*
  exposed-modules:     MathlibBench.Types
                     , MathlibBench.Config

executable mathlib-bench-backend
  import:              deps
  hs-source-dirs:      backend
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       mathlib-bench
                     , bytestring == 0.10.*
                     , directory == 1.3.*
                     , typed-process == 0.2.*
  other-modules:       MathlibBench.Backend.Config
                     , MathlibBench.Backend.Logging
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

executable mathlib-bench-frontend
  import:              deps
  hs-source-dirs:      frontend
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       mathlib-bench
                     , bytestring == 0.10.*
                     , blaze-html == 0.9.*
                     , blaze-markup == 0.8.*
                     , file-embed == 0.0.*
                     , scotty == 0.11.*
  other-modules:       MathlibBench.Frontend.Config
                     , MathlibBench.Frontend.Static
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N