cabal-version:       2.2
name:                mathlib-bench
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jlimperg/mathlib-bench#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (C) 2020 Jannis Limperg
category:            Education
build-type:          Simple
extra-source-files:  README.md
                   , static/global.css

library
  hs-source-dirs:      lib
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.4 && < 1.6
                     , blaze-html == 0.9.*
                     , blaze-markup == 0.8.*
                     , bytestring == 0.10.*
                     , concurrent-extra == 0.7.*
                     , containers == 0.6.*
                     , directory == 1.3.*
                     , filepath == 1.4.*
                     , filepattern == 0.1.*
                     , file-embed == 0.0.*
                     , heredoc == 0.2.*
                     , http-conduit == 2.3.*
                     , http-types == 0.12.*
                     , optparse-applicative >= 0.15 && < 0.17
                     , postgresql-simple == 0.6.*
                     , random >= 1.1 && < 1.3
                     , scotty >= 0.11 && < 1.13
                     , text == 1.2.*
                     , time == 1.9.*
                     , typed-process == 0.2.*
                     , vector == 0.12.*
                     , wai-cors == 0.2.*
  exposed-modules:     MathlibBench.Runner.Main
                     , MathlibBench.Supervisor.Main
  other-modules:       MathlibBench.Api
                     , MathlibBench.Command
                     , MathlibBench.Config
                     , MathlibBench.GitRepo
                     , MathlibBench.GitRepo.Lock
                     , MathlibBench.Logging
                     , MathlibBench.Runner.CmdArgs
                     , MathlibBench.Runner.Config
                     , MathlibBench.Secret
                     , MathlibBench.Supervisor.CmdArgs
                     , MathlibBench.Supervisor.Config
                     , MathlibBench.Supervisor.Db
                     , MathlibBench.Supervisor.Frontend
                     , MathlibBench.Supervisor.Frontend.CommitPage
                     , MathlibBench.Supervisor.Frontend.Json
                     , MathlibBench.Supervisor.Frontend.Static
                     , MathlibBench.Supervisor.Frontend.TimingPage
                     , MathlibBench.Supervisor.GitRepo.Timestamp
                     , MathlibBench.Supervisor.Zulip
                     , MathlibBench.Types
  default-language:    Haskell2010

executable mathlib-bench-supervisor
  hs-source-dirs:      supervisor
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , mathlib-bench
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

executable mathlib-bench-runner
  hs-source-dirs:      runner
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , mathlib-bench
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
